Setting up MembersController just to get the database connection. Updating all Models. Setting up keys, both in Models and manually with OnModelCreating.

--- a/Uppgift14-Garage30/appsettings.json
+++ b/Uppgift14-Garage30/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Uppgift14_Garage30Context": "Server=(localdb)\\mssqllocaldb;Database=Uppgift14_Garage30Context;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
